# CursaMalashik

./: README.md
cursaProga-master/: CMakeLists.txt  mainwindow.cpp
cursaProga_part_2/: dfs_result.txt  graph.txt  main  main.cpp
